fix(): Changed scrollbars architecture, removed instance access, converted scrollbars to functional components

--- a/src/components/Scrollable/Scrollable.scss
+++ b/src/components/Scrollable/Scrollable.scss
@@ -28,11 +28,6 @@
     visibility: hidden;
     pointer-events: none;
 
-    &.visible {
-      visibility: visible;
-      pointer-events: auto;
-    }
-
     .scrollbar-thumb {
       position: absolute;
       padding: 3px;
