--- a/src/components/Scrollable/components/VerticalScrollbar/VerticalScrollbar.scss
+++ b/src/components/Scrollable/components/VerticalScrollbar/VerticalScrollbar.scss
@@ -1,4 +1,9 @@
 .scrollbar {
+  &.vertically-scrollable .vertical-scrollbar-track {
+    visibility: visible;
+    pointer-events: auto;
+  }
+
   .vertical-scrollbar-track {
     position: absolute;
     width: 12px;
